CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(openssl_test)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../lib)
SET(CMAKE_BUILD_DEBUG)
ADD_DEFINITIONS(-std=c++11 -g3)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/../include)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/../lib)

ADD_SUBDIRECTORY(test)

